--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,7 +2,9 @@ version: '3.8'
 
 services:
   web:
-    build: ./app
+    build: 
+      context: ./app
+      dockerfile: Dockerfile.prod
     command: gunicorn app_django.wsgi:application --bind 0.0.0.0:8000
     ports:
       - 8000:8000
