--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -6,8 +6,11 @@ services:
       context: ./app
       dockerfile: Dockerfile.prod
     command: gunicorn app_django.wsgi:application --bind 0.0.0.0:8000
-    ports:
-      - 8000:8000
+    # port 8000 is only exposed internally, to other Docker services.
+    expose: 
+      - 8000
+    # ports:
+    #   - 8000:8000
     env_file:
       - ./.env.prod
     depends_on:
@@ -18,6 +21,12 @@ services:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
       - ./.env.prod.db
+  nginx:
+    build: ./nginx
+    ports:
+      - 1337:80
+    depends_on: 
+      - web
 
 volumes:
   postgres_data:
