--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -11,6 +11,7 @@ services:
       - 8000
     volumes: 
       - static_volume:/home/app/web/staticfiles
+      - media_volume:/home/app/web/mediafiles
     env_file:
       - ./.env.prod
     depends_on:
@@ -25,6 +26,7 @@ services:
     build: ./nginx
     volumes: 
       - static_volume:/home/app/web/staticfiles
+      - media_volume:/home/app/web/mediafiles
     ports:
       - 1337:80
     depends_on: 
@@ -33,3 +35,4 @@ services:
 volumes:
   postgres_data:
   static_volume:
+  media_volume:
